--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
     <input type="button" onclick="location.href='https://mail.google.com/mail/?view=cm&to=hoge_to@example.com&su=まほすずおたより&body=まほすずネーム：%0D%0A'"value="まほすずおたよりメール">
   
     <br>
+    <!--メールフォーム案スマホテスト-->
+    <p>メールフォーム案スマホ</p>   
+    <input type="button" onclick="location.href='mailto:info@example.com?subject=まほすずおたより&amp;body=まほすずネーム：%0D%0A' "value="まほすずおたよりメール">
+
+
+    <br>
     <br>
 
     <!--スライドショーテスト1-->
